# FreeRTOS-Kernel

./: meson.build  meson.options
default_config/: FreeRTOSConfig.h
